<resources>
    <string name="app_name">MiniMoneybox</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_full_name">Full Name (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="email_address_error">Please enter a correct email address</string>
    <string name="password_error">Please enter a correct password</string>
    <string name="full_name_error">Please enter your full name</string>
    <string name="input_valid">Input is valid!</string>
    <!--    Lottie files-->
    <string name="lottie_owl_coin_shower">owl_coin_shower.json</string>
    <string name="plan_value_">Plan Value: </string>
    <string name="plan_value">Plan Value </string>
    <string name="moneybox_">Moneybox: </string>
    <string name="hello">Hello</string>
    <string name="total_plan_value_">Total Plan Value: £</string>
    <string name="pound_symbol">£</string>
    <string name="total_plan_value">Total Plan Value</string>
    <string name="argument_investor_name">investorName</string>
    <string name="argument_product">investment</string>
    <string name="add_pounds">Add £10</string>
    <string name="investor">Investor</string>
    <string name="my_accounts">My accounts</string>
    <string name="moneybox_help">MoneyBox helped you save</string>
    <string name="total">Total</string>
    <string name="sign_out">Sign out</string>

</resources>
