<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="android.view.View" />
        <import type="com.example.minimoneybox.utils.StringUtil"/>

        <variable
            name="viewmodel"
            type="com.example.minimoneybox.ui.investor.InvestorViewModel"/>



    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.cardview.widget.CardView
            android:id="@+id/materialCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="16dp"
            app:cardBackgroundColor="@color/designMainColor"
            app:cardElevation="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeWidth="1dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/textView"
                    style="@style/cardTitle"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:text="@{viewmodel.product.productInfo.name, default=name}"
                    android:textColor="@color/whiteBodyColor"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <View
                    android:id="@+id/view"
                    android:layout_width="320dp"
                    android:layout_height="0.2dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="32dp"
                    android:background="@color/whiteBodyColor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/textView"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <TextView
                    android:id="@+id/textView4"
                    style="@style/cardText"
                    android:layout_marginBottom="16dp"
                    android:text="@string/plan_value"
                    android:textColor="@color/whiteBodyColor"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/textView5"
                    app:layout_constraintTop_toBottomOf="@+id/textView5" />


                <TextView
                    android:id="@+id/textView5"
                    style="@style/bigMoney"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:text="@{StringUtil.convertPoundsToString(viewmodel.product.planValue), default=planValue}"
                    android:textColor="@color/whiteBodyColor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/materialCardView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"

            android:layout_marginTop="50dp"
            android:layout_marginEnd="16dp"
            app:cardElevation="2dp"
            app:layout_constraintTop_toBottomOf="@+id/materialCardView"
            app:strokeColor="@color/designMainColor"
            app:strokeWidth="1dp"
            tools:layout_editor_absoluteX="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/textView51"
                    style="@style/cardTitle"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/moneybox_help"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <View
                    android:id="@+id/view5"
                    android:layout_width="320dp"
                    android:layout_height="0.2dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="32dp"
                    android:background="@color/designMainColor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/textView51"
                    app:layout_constraintTop_toBottomOf="@+id/textView51" />

                <com.romainpiel.shimmer.ShimmerTextView
                    android:id="@+id/textView54"
                    style="@style/bigMoney"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="16dp"
                    android:text="@{StringUtil.convertPoundsToString(viewmodel.product.moneybox), default=moneybox}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view5" />


                <TextView
                    android:id="@+id/txt_total"
                    style="@style/cardText"
                    android:layout_marginBottom="16dp"
                    android:text="@string/total"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/textView54"
                    app:layout_constraintTop_toBottomOf="@+id/textView54" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>


        <!--        <androidx.cardview.widget.CardView-->
        <!--            android:id="@+id/materialCardView2"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginStart="16dp"-->
        <!--            android:layout_marginTop="30dp"-->
        <!--            android:layout_marginEnd="16dp"-->
        <!--            app:cardElevation="2dp"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@+id/materialCardView"-->
        <!--            app:strokeWidth="1dp">-->

        <!--            <androidx.constraintlayout.widget.ConstraintLayout-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="wrap_content">-->


        <!--                <TextView-->
        <!--                    android:id="@+id/textView31"-->
        <!--                    style="@style/cardSubTitle"-->
        <!--                    android:layout_marginStart="16dp"-->
        <!--                    android:layout_marginTop="16dp"-->
        <!--                    android:layout_marginBottom="16dp"-->
        <!--                    android:text="@string/moneybox_help"-->
        <!--                    app:layout_constraintBottom_toBottomOf="parent"-->
        <!--                    app:layout_constraintStart_toStartOf="parent"-->
        <!--                    app:layout_constraintTop_toTopOf="parent" />-->


        <!--                <TextView-->
        <!--                    android:id="@+id/textView7"-->
        <!--                    style="@style/bigMoney"-->
        <!--                    android:layout_marginStart="16dp"-->
        <!--                    android:layout_marginEnd="16dp"-->
        <!--                    android:text="@{StringUtil.convertPoundsToString(viewmodel.product.moneybox), default=moneybox}"-->
        <!--                    app:layout_constraintBottom_toBottomOf="@+id/textView31"-->
        <!--                    app:layout_constraintEnd_toEndOf="parent"-->
        <!--                    app:layout_constraintStart_toEndOf="@+id/textView31"-->
        <!--                    app:layout_constraintTop_toTopOf="@+id/textView31" />-->


        <!--            </androidx.constraintlayout.widget.ConstraintLayout>-->


        <!--        </androidx.cardview.widget.CardView>-->


        <Button
            android:id="@+id/btn_payment"
            style="@style/Widget.Button.Colored.Rounded"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="81dp"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="80dp"
            android:text="@string/add_pounds"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>